--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <input id="password" type="password" name="password">
             <hr>
             <label for="height">Your height in cm:</label><br>
-            <input id="height" type="number" name="height">
+            <input id="height" type="number" name="height" min="40" max="140">
             <hr>
             <label for="color">Your favorite color:</label>
             <input id="color" type="color" name="color">
