--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                 I accept
             </label>
             <hr>
+            <label>
+                Datum:<br>
+                <input type="date">
+            </label>
+            <hr>
             <button>Register</button>
         </form>
     </body>
