--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Account registration</h1>
-        <form>
+        <form method="GET" action="">
             <label for="first_name">First name:</label><br>
             <input id="first_name" type="text" name="first_name">
             <hr>
