--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Webshop Registration</title>
     </head>
 
-    <body>
+    <body style="background-color: bisque;">
         <h1>Account registration</h1>
         <form method="GET" action="">
             <label for="first_name">First name:</label><br>
