--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Webshop Registration</title>
     </head>
 
-    <body style="background-color: bisque;">
-        <h1>Account registration</h1>
+    <body style="background-color: bisque; color: brown;">
+        <h1 style="color: chocolate;">Account registration</h1>
         <form method="GET" action="">
             <label for="first_name">First name:</label><br>
             <input id="first_name" type="text" name="first_name">
@@ -15,7 +15,7 @@
             <input id="last_name" type="text" name="last_name">
             <hr>
             <label for="email">Your email:</label><br>
-            <input id="email" type="email" name="email">
+            <input id="email" type="email" name="email" required>
             <hr>
             <label for="password">Password:</label><br>
             <input id="password" type="password" name="password">
@@ -61,7 +61,7 @@
             </label>
             <hr>
             <label>
-                Datum:<br>
+                Date:<br>
                 <input type="date">
             </label>
             <hr>
